apps/louis/base/litellm/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm-non_root:v1.103.0
          args: ["--port", "4000", "--config", "/app/proxy_server_config.yaml"]
          resources:
            requests:
              cpu: 1000m
              memory: 8G
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: config-volume
              mountPath: /app/proxy_server_config.yaml
              subPath: config.yaml
            - name: cache-volume
              mountPath: /.cache
            - name: npm-volume
              mountPath: /.npm
            - name: migration-volume
              mountPath: /tmp/litellm-migrations

      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
        - name: cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1G
        - name: npm-volume
          emptyDir:
            medium: Memory
            sizeLimit: 200Mi
        - name: migration-volume
          emptyDir:
            medium: Memory
            sizeLimit: 200Mi

---
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
